// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`GrcView component 1 renders as expected 1`] = `
<ContextProvider
  value={
    Object {
      "store": Object {
        "clearActions": [Function],
        "dispatch": [Function],
        "getActions": [Function],
        "getState": [Function],
        "replaceReducer": [Function],
        "subscribe": [Function],
      },
      "subscription": Subscription {
        "handleChangeWrapper": [Function],
        "listeners": Object {
          "notify": [Function],
        },
        "onStateChange": [Function],
        "parentSub": undefined,
        "store": Object {
          "clearActions": [Function],
          "dispatch": [Function],
          "getActions": [Function],
          "getState": [Function],
          "replaceReducer": [Function],
          "subscribe": [Function],
        },
        "unsubscribe": null,
      },
    }
  }
>
  <BrowserRouter>
    <GrcView
      activeFilters={Object {}}
      error={null}
      grcItems={
        Array [
          Object {
            "__typename": "Compliance",
            "clusterCompliant": "1/1",
            "clusterConsoleURL": Object {
              "calamari": "https://console-openshift-console.apps.calamari.dev08.red-chesterfield.com",
            },
            "clusterNS": Object {
              "calamari": "calamari",
            },
            "metadata": Object {
              "__typename": "Metadata",
              "annotations": Object {
                "kubectl.kubernetes.io/last-applied-configuration": "{\\"apiVersion\\":\\"policy.open-cluster-management.io/v1\\",\\"kind\\":\\"Policy\\",\\"metadata\\":{\\"annotations\\":{\\"policy.open-cluster-management.io/categories\\":\\"PR.DS Data Security\\",\\"policy.open-cluster-management.io/controls\\":\\"PR.DS-2 Data-in-transit\\",\\"policy.open-cluster-management.io/standards\\":\\"NIST-CSF\\"},\\"name\\":\\"case6-test-policy\\",\\"namespace\\":\\"default\\"},\\"spec\\":{\\"disabled\\":false,\\"policy-templates\\":[{\\"objectDefinition\\":{\\"apiVersion\\":\\"policies.ibm.com/v1alpha1\\",\\"kind\\":\\"TrustedContainerPolicy\\",\\"metadata\\":{\\"name\\":\\"case6-test-policy-trustedcontainerpolicy\\"},\\"spec\\":{\\"imageRegistry\\":\\"quay.io\\",\\"namespaceSelector\\":{\\"exclude\\":[\\"kube-system\\",\\"default\\"],\\"include\\":[\\"e2e-test\\"]},\\"remediationAction\\":\\"inform\\",\\"severity\\":\\"low\\"}}},{\\"objectDefinition\\":{\\"apiVersion\\":\\"policy.open-cluster-management.io/v1\\",\\"kind\\":\\"ConfigurationPolicy\\",\\"metadata\\":{\\"name\\":\\"case6-policy-role-example\\"},\\"spec\\":{\\"namespaceSelector\\":{\\"exclude\\":[\\"kube-*\\"],\\"include\\":[\\"default\\"]},\\"object-templates\\":[{\\"complianceType\\":\\"mustonlyhave\\",\\"objectDefinition\\":{\\"apiVersion\\":\\"rbac.authorization.k8s.io/v1\\",\\"kind\\":\\"Role\\",\\"metadata\\":{\\"name\\":\\"policy-role-example\\"},\\"rules\\":[{\\"apiGroups\\":[\\"extensions\\",\\"apps\\"],\\"resources\\":[\\"deployments\\"],\\"verbs\\":[\\"get\\",\\"list\\",\\"watch\\",\\"delete\\",\\"patch\\"]}]}}],\\"remediationAction\\":\\"inform\\",\\"severity\\":\\"high\\"}}}],\\"remediationAction\\":\\"inform\\"}}
",
                "policy.open-cluster-management.io/categories": "PR.DS Data Security",
                "policy.open-cluster-management.io/controls": "PR.DS-2 Data-in-transit",
                "policy.open-cluster-management.io/standards": "NIST-CSF",
              },
              "name": "case6-test-policy",
              "namespace": "default",
              "resourceVersion": "37198197",
              "selfLink": "/apis/policy.open-cluster-management.io/v1/namespaces/default/policies/case6-test-policy",
            },
            "name": "case6-test-policy",
            "namespace": "default",
            "placementBindings": Array [
              Object {
                "__typename": "PlacementBinding",
                "metadata": Object {
                  "__typename": "Metadata",
                  "name": "case6-test-policy-pb",
                  "selfLink": "/apis/policy.open-cluster-management.io/v1/namespaces/default/placementbindings/case6-test-policy-pb",
                },
              },
            ],
            "placementPolicies": Array [
              Object {
                "__typename": "PlacementPolicy",
                "metadata": Object {
                  "__typename": "Metadata",
                  "name": "case6-test-policy-plr",
                  "selfLink": "/apis/apps.open-cluster-management.io/v1/namespaces/default/placementrules/case6-test-policy-plr",
                },
              },
            ],
            "policyCompliant": "0/0",
            "raw": Object {
              "apiVersion": "policy.open-cluster-management.io/v1",
              "kind": "Policy",
              "metadata": Object {
                "annotations": Object {
                  "kubectl.kubernetes.io/last-applied-configuration": "{\\"apiVersion\\":\\"policy.open-cluster-management.io/v1\\",\\"kind\\":\\"Policy\\",\\"metadata\\":{\\"annotations\\":{\\"policy.open-cluster-management.io/categories\\":\\"PR.DS Data Security\\",\\"policy.open-cluster-management.io/controls\\":\\"PR.DS-2 Data-in-transit\\",\\"policy.open-cluster-management.io/standards\\":\\"NIST-CSF\\"},\\"name\\":\\"case6-test-policy\\",\\"namespace\\":\\"default\\"},\\"spec\\":{\\"disabled\\":false,\\"policy-templates\\":[{\\"objectDefinition\\":{\\"apiVersion\\":\\"policies.ibm.com/v1alpha1\\",\\"kind\\":\\"TrustedContainerPolicy\\",\\"metadata\\":{\\"name\\":\\"case6-test-policy-trustedcontainerpolicy\\"},\\"spec\\":{\\"imageRegistry\\":\\"quay.io\\",\\"namespaceSelector\\":{\\"exclude\\":[\\"kube-system\\",\\"default\\"],\\"include\\":[\\"e2e-test\\"]},\\"remediationAction\\":\\"inform\\",\\"severity\\":\\"low\\"}}},{\\"objectDefinition\\":{\\"apiVersion\\":\\"policy.open-cluster-management.io/v1\\",\\"kind\\":\\"ConfigurationPolicy\\",\\"metadata\\":{\\"name\\":\\"case6-policy-role-example\\"},\\"spec\\":{\\"namespaceSelector\\":{\\"exclude\\":[\\"kube-*\\"],\\"include\\":[\\"default\\"]},\\"object-templates\\":[{\\"complianceType\\":\\"mustonlyhave\\",\\"objectDefinition\\":{\\"apiVersion\\":\\"rbac.authorization.k8s.io/v1\\",\\"kind\\":\\"Role\\",\\"metadata\\":{\\"name\\":\\"policy-role-example\\"},\\"rules\\":[{\\"apiGroups\\":[\\"extensions\\",\\"apps\\"],\\"resources\\":[\\"deployments\\"],\\"verbs\\":[\\"get\\",\\"list\\",\\"watch\\",\\"delete\\",\\"patch\\"]}]}}],\\"remediationAction\\":\\"inform\\",\\"severity\\":\\"high\\"}}}],\\"remediationAction\\":\\"inform\\"}}
",
                  "policy.open-cluster-management.io/categories": "PR.DS Data Security",
                  "policy.open-cluster-management.io/controls": "PR.DS-2 Data-in-transit",
                  "policy.open-cluster-management.io/standards": "NIST-CSF",
                },
                "creationTimestamp": "2020-05-27T14:36:05Z",
                "generation": 1,
                "name": "case6-test-policy",
                "namespace": "default",
                "resourceVersion": "37198197",
                "selfLink": "/apis/policy.open-cluster-management.io/v1/namespaces/default/policies/case6-test-policy",
                "uid": "ed964170-b17d-4e23-880e-575be3eac901",
              },
              "spec": Object {
                "disabled": false,
                "policy-templates": Array [
                  Object {
                    "objectDefinition": Object {
                      "apiVersion": "policies.ibm.com/v1alpha1",
                      "kind": "TrustedContainerPolicy",
                      "metadata": Object {
                        "name": "case6-test-policy-trustedcontainerpolicy",
                      },
                      "spec": Object {
                        "imageRegistry": "quay.io",
                        "namespaceSelector": Object {
                          "exclude": Array [
                            "kube-system",
                            "default",
                          ],
                          "include": Array [
                            "e2e-test",
                          ],
                        },
                        "remediationAction": "inform",
                        "severity": "low",
                      },
                    },
                  },
                  Object {
                    "objectDefinition": Object {
                      "apiVersion": "policy.open-cluster-management.io/v1",
                      "kind": "ConfigurationPolicy",
                      "metadata": Object {
                        "name": "case6-policy-role-example",
                      },
                      "spec": Object {
                        "namespaceSelector": Object {
                          "exclude": Array [
                            "kube-*",
                          ],
                          "include": Array [
                            "default",
                          ],
                        },
                        "object-templates": Array [
                          Object {
                            "complianceType": "mustonlyhave",
                            "objectDefinition": Object {
                              "apiVersion": "rbac.authorization.k8s.io/v1",
                              "kind": "Role",
                              "metadata": Object {
                                "name": "policy-role-example",
                              },
                              "rules": Array [
                                Object {
                                  "apiGroups": Array [
                                    "extensions",
                                    "apps",
                                  ],
                                  "resources": Array [
                                    "deployments",
                                  ],
                                  "verbs": Array [
                                    "get",
                                    "list",
                                    "watch",
                                    "delete",
                                    "patch",
                                  ],
                                },
                              ],
                            },
                          },
                        ],
                        "remediationAction": "inform",
                        "severity": "high",
                      },
                    },
                  },
                ],
                "remediationAction": "inform",
              },
              "status": Object {
                "placement": Array [
                  Object {
                    "placementBinding": "case6-test-policy-pb",
                    "placementRule": "case6-test-policy-plr",
                  },
                ],
                "status": Array [
                  Object {
                    "clustername": "calamari",
                    "clusternamespace": "calamari",
                    "compliant": "NonCompliant",
                  },
                ],
              },
            },
            "remediation": "inform",
          },
          Object {
            "__typename": "Compliance",
            "clusterCompliant": "1/1",
            "clusterConsoleURL": Object {
              "calamari": "https://console-openshift-console.apps.calamari.dev08.red-chesterfield.com",
            },
            "clusterNS": Object {
              "calamari": "calamari",
            },
            "metadata": Object {
              "__typename": "Metadata",
              "annotations": Object {
                "policy.open-cluster-management.io/categories": "PR.AC Identity Management Authentication and Access Control",
                "policy.open-cluster-management.io/controls": "PR.AC-4 Access Control",
                "policy.open-cluster-management.io/standards": "NIST-CSF",
              },
              "name": "policy-rolebinding",
              "namespace": "default",
              "resourceVersion": "37491359",
              "selfLink": "/apis/policy.open-cluster-management.io/v1/namespaces/default/policies/policy-rolebinding",
            },
            "name": "policy-rolebinding",
            "namespace": "default",
            "placementBindings": Array [
              Object {
                "__typename": "PlacementBinding",
                "metadata": Object {
                  "__typename": "Metadata",
                  "name": "binding-policy-rolebinding",
                  "selfLink": "/apis/policy.open-cluster-management.io/v1/namespaces/default/placementbindings/binding-policy-rolebinding",
                },
              },
            ],
            "placementPolicies": Array [
              Object {
                "__typename": "PlacementPolicy",
                "metadata": Object {
                  "__typename": "Metadata",
                  "name": "placement-policy-rolebinding",
                  "selfLink": "/apis/apps.open-cluster-management.io/v1/namespaces/default/placementrules/placement-policy-rolebinding",
                },
              },
            ],
            "policyCompliant": "0/0",
            "raw": Object {
              "apiVersion": "policy.open-cluster-management.io/v1",
              "kind": "Policy",
              "metadata": Object {
                "annotations": Object {
                  "policy.open-cluster-management.io/categories": "PR.AC Identity Management Authentication and Access Control",
                  "policy.open-cluster-management.io/controls": "PR.AC-4 Access Control",
                  "policy.open-cluster-management.io/standards": "NIST-CSF",
                },
                "creationTimestamp": "2020-05-27T13:23:03Z",
                "generation": 7,
                "name": "policy-rolebinding",
                "namespace": "default",
                "resourceVersion": "37491359",
                "selfLink": "/apis/policy.open-cluster-management.io/v1/namespaces/default/policies/policy-rolebinding",
                "uid": "f5f5ad1b-8acc-4814-9560-9edd3ace6fba",
              },
              "spec": Object {
                "disabled": false,
                "policy-templates": Array [
                  Object {
                    "objectDefinition": Object {
                      "apiVersion": "policy.open-cluster-management.io/v1",
                      "kind": "ConfigurationPolicy",
                      "metadata": Object {
                        "name": "policy-rolebinding-example",
                      },
                      "spec": Object {
                        "namespaceSelector": Object {
                          "exclude": Array [
                            "kube-*",
                          ],
                          "include": Array [
                            "default",
                          ],
                        },
                        "object-templates": Array [
                          Object {
                            "complianceType": "musthave",
                            "objectDefinition": Object {
                              "apiVersion": "rbac.authorization.k8s.io/v1",
                              "kind": "RoleBinding",
                              "metadata": Object {
                                "name": "operate-pods-rolebinding",
                              },
                              "roleRef": Object {
                                "apiGroup": "rbac.authorization.k8s.io",
                                "kind": "Role",
                                "name": "operator",
                              },
                              "subjects": Array [
                                Object {
                                  "apiGroup": "rbac.authorization.k8s.io",
                                  "kind": "User",
                                  "name": "admin",
                                },
                              ],
                            },
                          },
                        ],
                        "remediationAction": "inform",
                        "severity": "high",
                      },
                    },
                  },
                ],
                "remediationAction": "inform",
              },
              "status": Object {
                "placement": Array [
                  Object {
                    "placementBinding": "binding-policy-rolebinding",
                    "placementRule": "placement-policy-rolebinding",
                  },
                ],
                "status": Array [
                  Object {
                    "clustername": "calamari",
                    "clusternamespace": "calamari",
                    "compliant": "NonCompliant",
                  },
                ],
              },
            },
            "remediation": "inform",
          },
        ]
      }
      history={
        Object {
          "action": "POP",
          "block": [Function],
          "canGo": [Function],
          "createHref": [Function],
          "entries": Array [
            Object {
              "hash": "",
              "key": "s4wxvc",
              "pathname": "/",
              "search": "",
              "state": undefined,
            },
          ],
          "go": [Function],
          "goBack": [Function],
          "goForward": [Function],
          "index": 0,
          "length": 1,
          "listen": [Function],
          "location": Object {
            "hash": "",
            "key": "s4wxvc",
            "pathname": "/",
            "search": "",
            "state": undefined,
          },
          "push": [Function],
          "replace": [Function],
        }
      }
      loading={false}
      location={
        Object {
          "pathname": "/multicloud/policies/all",
        }
      }
      refreshControl={
        Object {
          "refreshCookie": "grc-refresh-interval-cookie",
          "reloading": false,
          "timestamp": "Tue Jul 23 2019 01:13:42 GMT-0400 (Eastern Daylight Time)",
        }
      }
      secondaryHeaderProps={
        Object {
          "information": "grc.header.tooltip",
          "links": Array [
            Object {
              "id": "create-policy",
              "label": "button.create.policy",
              "url": "/multicloud/policies/create",
            },
          ],
          "tabs": Array [
            Object {
              "id": "grc-overview",
              "index": 0,
              "label": "tabs.grc.overview",
              "url": "/multicloud/policies",
            },
            Object {
              "id": "grc-all",
              "index": 1,
              "label": "tabs.grc.all",
              "url": "/multicloud/policies/all",
            },
            Object {
              "id": "grc-findings",
              "index": 2,
              "label": "tabs.grc.findings",
              "url": "/multicloud/policies/findings",
            },
          ],
          "title": "routes.grc",
        }
      }
      showApplications={true}
      title="Test1"
    />
  </BrowserRouter>
</ContextProvider>
`;

exports[`GrcView component 2 renders as expected 1`] = `
<span
  aria-valuetext="Loading..."
  className="pf-c-spinner pf-m-xl patternfly-spinner"
  role="progressbar"
>
  <span
    className="pf-c-spinner__clipper"
  />
  <span
    className="pf-c-spinner__lead-ball"
  />
  <span
    className="pf-c-spinner__tail-ball"
  />
</span>
`;

exports[`GrcView component 3 renders as expected 1`] = `
<div
  className="bx--inline-notification bx--inline-notification--error overview-notification"
  kind="error"
  role="alert"
>
  <div
    className="bx--inline-notification__details"
  >
    <svg
      alt="closes notification"
      aria-label="closes notification"
      className="bx--inline-notification__icon"
      fillRule="evenodd"
      height="16"
      role="img"
      viewBox="0 0 16 16"
      width="16"
    >
      <title>
        closes notification
      </title>
      <path
        d="M8 16A8 8 0 1 1 8 0a8 8 0 0 1 0 16zM3.293 4.707l8 8 1.414-1.414-8-8-1.414 1.414z"
      />
    </svg>
    <div
      className="bx--inline-notification__text-wrapper"
    >
      <p
        className="bx--inline-notification__title"
      >
        
      </p>
      <div
        className="bx--inline-notification__subtitle"
      >
        An unexpected error occurred. Try again.
      </div>
    </div>
  </div>
  <button
    className="bx--inline-notification__close-button"
    onClick={[Function]}
    title="close icon"
    type="button"
  >
    <svg
      alt="close icon"
      aria-label="close icon"
      className="bx--inline-notification__close-icon"
      fillRule="evenodd"
      height="10"
      role="img"
      viewBox="0 0 10 10"
      width="10"
    >
      <title>
        close icon
      </title>
      <path
        d="M6.32 5L10 8.68 8.68 10 5 6.32 1.32 10 0 8.68 3.68 5 0 1.32 1.32 0 5 3.68 8.68 0 10 1.32 6.32 5z"
      />
    </svg>
  </button>
</div>
`;

exports[`GrcView component 4 renders as expected 1`] = `
<div
  className="grc-view"
>
  <div
    className="module-grc-cards"
  >
    <dl
      aria-label=""
      className="pf-c-accordion"
    >
      <dt>
        <button
          aria-expanded={false}
          className="pf-c-accordion__toggle header-container"
          id="summary-toggle"
          onClick={[Function]}
        >
          <span
            className="pf-c-accordion__toggle-text"
          >
            <div
              className="header-title"
            >
              Summary
              <span
                className="pf-c-label grc-cards-count"
              >
                <span
                  className="pf-c-label__content"
                >
                  2
                </span>
              </span>
            </div>
          </span>
          <span
            className="pf-c-accordion__toggle-icon"
          >
            <svg
              aria-hidden={true}
              aria-labelledby={null}
              fill="currentColor"
              height="1em"
              role="img"
              style={
                Object {
                  "verticalAlign": "-0.125em",
                }
              }
              viewBox="0 0 256 512"
              width="1em"
            >
              <path
                d="M224.3 273l-136 136c-9.4 9.4-24.6 9.4-33.9 0l-22.6-22.6c-9.4-9.4-9.4-24.6 0-33.9l96.4-96.4-96.4-96.4c-9.4-9.4-9.4-24.6 0-33.9L54.3 103c9.4-9.4 24.6-9.4 33.9 0l136 136c9.5 9.4 9.5 24.6.1 34z"
              />
            </svg>
          </span>
        </button>
      </dt>
      <dd
        aria-label=""
        className="pf-c-accordion__expanded-content grc-cards-container"
        hidden={true}
        id=""
      >
        <div
          className="pf-c-accordion__expanded-content-body"
        >
          <div>
            <div
              className="card-container"
            >
              <div
                className="card-content"
              >
                <div
                  className="card-name"
                >
                  NIST
                </div>
                <div
                  className="card-count-content"
                >
                  <div
                    className="card-count-container violated"
                    onClick={[Function]}
                    onKeyPress={[Function]}
                    role="button"
                    tabIndex={0}
                  >
                    <div
                      className="card-count"
                    >
                      <div
                        className="card-count-informations"
                      >
                        2
                      </div>
                      <div
                        className="card-count-total"
                      >
                        /2
                      </div>
                    </div>
                    <div
                      className="card-grc-type"
                    >
                      Cluster violations
                    </div>
                  </div>
                  <div
                    className="card-count-container violated"
                    onClick={[Function]}
                    onKeyPress={[Function]}
                    role="button"
                    tabIndex={0}
                  >
                    <div
                      className="card-count"
                    >
                      <div
                        className="card-count-informations"
                      >
                        3
                      </div>
                      <div
                        className="card-count-total"
                      >
                        /3
                      </div>
                    </div>
                    <div
                      className="card-grc-type"
                    >
                      Policy violations
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
          <div>
            <div
              className="card-container"
            >
              <div
                className="card-content"
              >
                <div
                  className="card-name"
                >
                  HIPAA
                </div>
                <div
                  className="card-count-content"
                >
                  <div
                    className="card-count-container violated"
                    onClick={[Function]}
                    onKeyPress={[Function]}
                    role="button"
                    tabIndex={0}
                  >
                    <div
                      className="card-count"
                    >
                      <div
                        className="card-count-informations"
                      >
                        1
                      </div>
                      <div
                        className="card-count-total"
                      >
                        /2
                      </div>
                    </div>
                    <div
                      className="card-grc-type"
                    >
                      Cluster violations
                    </div>
                  </div>
                  <div
                    className="card-count-container violated"
                    onClick={[Function]}
                    onKeyPress={[Function]}
                    role="button"
                    tabIndex={0}
                  >
                    <div
                      className="card-count"
                    >
                      <div
                        className="card-count-informations"
                      >
                        2
                      </div>
                      <div
                        className="card-count-total"
                      >
                        /2
                      </div>
                    </div>
                    <div
                      className="card-grc-type"
                    >
                      Policy violations
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </dd>
    </dl>
  </div>
  <div
    className="module-toggle-tab"
  >
    <span
      aria-valuetext="Loading..."
      className="pf-c-spinner pf-m-xl patternfly-spinner"
      role="progressbar"
    >
      <span
        className="pf-c-spinner__clipper"
      />
      <span
        className="pf-c-spinner__lead-ball"
      />
      <span
        className="pf-c-spinner__tail-ball"
      />
    </span>
  </div>
</div>
`;

exports[`GrcView component 7 has create permission renders as expected 1`] = `
<div>
  <div
    className="no-resource"
  >
    <img
      alt="No resource"
      className="no-resource-icon"
      src="undefined/graphics/EmptyPagePlanet-illus.png"
    />
    <div
      className="no-resource-text-info"
    >
      <div
        className="no-resource-title"
      >
        No policies found
      </div>
      <div
        className="no-resource-detail"
      >
        You don't have any policies, yet. Use the 
        <span
          className="no-resource-detail__link"
        >
          create policy
        </span>
         button to create the resource or view the documentation to find samples for creating new policies.
      </div>
    </div>
    <div
      className="button-group"
    >
      <div
        className="button-group-create-resource"
      >
        <button
          aria-disabled={false}
          aria-label={null}
          className="pf-c-button pf-m-primary pf-m-small"
          data-ouia-component-id="OUIA-Generated-Button-primary-1"
          data-ouia-component-type="PF4/Button"
          data-ouia-safe={true}
          disabled={false}
          id="create-resource"
          onClick={[Function]}
          type="button"
        >
          Create policy
        </button>
      </div>
      <div
        className="button-group-doc-link"
      >
        <a
          aria-describedby="launchWindow"
          aria-disabled={false}
          aria-label={null}
          className="pf-c-button pf-m-link pf-m-inline"
          data-ouia-component-id="OUIA-Generated-Button-link-1"
          data-ouia-component-type="PF4/Button"
          data-ouia-safe={true}
          disabled={null}
          href="https://access.redhat.com/documentation/en-us/red_hat_advanced_cluster_management_for_kubernetes/undefined/html/security/security#manage-security-policies"
          id="doc-link"
          target="doc"
          type={null}
        >
          View documentation
        </a>
      </div>
    </div>
  </div>
</div>
`;

exports[`GrcView component 8 has not create permission renders as expected 1`] = `
<div>
  <div
    className="no-resource"
  >
    <img
      alt="No resource"
      className="no-resource-icon"
      src="undefined/graphics/EmptyPagePlanet-illus.png"
    />
    <div
      className="no-resource-text-info"
    >
      <div
        className="no-resource-title"
      >
        No policies found
      </div>
      <div
        className="no-resource-detail"
      >
        You don't have any policies, yet. Use the 
        <span
          className="no-resource-detail__link"
        >
          create policy
        </span>
         button to create the resource or view the documentation to find samples for creating new policies.
      </div>
    </div>
    <div
      className="button-group"
    >
      <div
        className="button-group-create-resource"
      >
        <div
          aria-describedby="pf-tooltip-1"
          className="disable-tooltip"
        >
          <button
            aria-disabled={true}
            aria-label={null}
            className="pf-c-button pf-m-primary pf-m-disabled pf-m-small"
            data-ouia-component-id="OUIA-Generated-Button-primary-2"
            data-ouia-component-type="PF4/Button"
            data-ouia-safe={true}
            disabled={true}
            id="create-resource"
            onClick={[Function]}
            tabIndex={null}
            type="button"
          >
            Create policy
          </button>
        </div>
      </div>
      <div
        className="button-group-doc-link"
      >
        <a
          aria-describedby="launchWindow"
          aria-disabled={false}
          aria-label={null}
          className="pf-c-button pf-m-link pf-m-inline"
          data-ouia-component-id="OUIA-Generated-Button-link-2"
          data-ouia-component-type="PF4/Button"
          data-ouia-safe={true}
          disabled={null}
          href="https://access.redhat.com/documentation/en-us/red_hat_advanced_cluster_management_for_kubernetes/undefined/html/security/security#manage-security-policies"
          id="doc-link"
          target="doc"
          type={null}
        >
          View documentation
        </a>
      </div>
    </div>
  </div>
</div>
`;
